--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
+    "firebase-admin": "^12.7.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "react": "19.2.0",
